--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-yew = "0.17.4"
+yew = {version = "0.17.4", features = ["web_sys"] }
 wasm-bindgen = "0.2.67"
 
