--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-yew = {version = "0.17.4", features = ["web_sys"] }
+yew = {version = "0.17.4", features = ["web_sys", "toml"] }
 wasm-bindgen = "0.2.67"
+anyhow = "1.0.37"
+serde = "1"
+serde_derive = "1"
 
